[package]
name = "metaphor-apk-pack"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
metaphor-apk-rs = { path = "../metaphor-apk-rs", features = [ "use-lz4-flex" ], default-features = false }
# walkdir = "2.5"