[package]
name = "metaphor-apk-rs"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
flate2 = { version = "1.0.35", features = ["zlib-rs"], default-features = false }
lz4_flex = { version = "0.11.5", optional = true }
lz4 = { version = "1.28.1", optional = true }
zstd = "0.13"

[features]
default = [ "use-lz4-flex" ]
use-lz4 = [ "dep:lz4" ]
use-lz4-flex = [ "dep:lz4_flex" ]